--- a/.eslintrc
+++ b/.eslintrc
@@ -3,11 +3,11 @@
   "env": {
     "node": true
   },
-  "extends": [
-    "plugin:vue/essential",
-    "eslint:recommended"
-  ],
+  "extends": ["plugin:vue/essential", "eslint:recommended"],
   "parserOptions": {
     "parser": "babel-eslint"
+  },
+  "rules": {
+    "no-console": "off"
   }
 }
