--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,15 @@
-semi: false
-singleQuote: true
-printWidth: 80
-trailingComma: "none"
-proseWrap: "never"
+{
+  "singleQuote": true,
+  "trailingComma": "all",
+  "printWidth": 100,
+  "proseWrap": "never",
+  "arrowParens": "avoid",
+  "overrides": [
+    {
+      "files": ".prettierrc",
+      "options": {
+        "parser": "json"
+      }
+    }
+  ]
+}
