--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "npm run lint:code && npm run lint:type",
-    "lint:code": "eslint --fix \"{src,build,scripts,demo}/**/*.{ts,tsx,js,vue,md}\"",
+    "lint:code": "eslint --fix \"{src,build,scripts,lib}/**/*.{ts,tsx,js,vue,md}\"",
+    "format:code": "prettier --write \"(src|lib)/**/*.(vue|js|ts|tsx)\"",
+    "format:md": "prettier --write --parser markdown --prose-wrap never \"(src|lib)/**/*.md\"",
     "postinstall": "git config core.hooksPath hooks",
     "prepare": "husky install"
   },
